# Tauction

./: .prettierignore  .replit  Pasted---1727556274757.txt  Pasted--1-19-1--1727145001169.txt  Pasted--1-19-1--1727145030013.txt  Pasted--1-Method-Not-Allowed--1727209293852.txt  Pasted--2-models-py-db-py-models-py-Base--1727187421676.txt  Pasted--3-QuartAuth--1727186827129.txt  Pasted--3-app-py-app-py-engine-async-session-db-py--1727187433163.txt  Pasted--4-auth-py-auth-py-async-session-db-py-mo-1727187443246.txt  Pasted--Commands-Search-Packager-files-Config-files-Recent-Cloud-Services-Workspace-Features-Collaboration--1727616813535.txt  Pasted--Docs-API-Kassa-API-API--1727486200093.txt  Pasted--Docs-API-Kassa-API-API--1727489011464.txt  Pasted--Quart--1727148404117.txt  Pasted--Running-on-http-172-31-196-28-5000-2024-09-24-23-25-10-330-werkzeug-INFO-Press-CTRL-C-to-q-1727220490949.txt  Pasted--Tauction-python-check-schema-py-Current-database-schema-Table-auction-watchlist-user-id--1727724802072.txt  Pasted--TelegramLoginWidget-alembic-upgrade-head-Traceback-most-recent-call-last-File-home-runner--1727562745702.txt  Pasted--TelegramLoginWidget-alembic-upgrade-head-Traceback-most-recent-call-last-File-home-runner--1727617558850.txt  Pasted--alembic-upgrade-head-vbnet-ERRO-1727726703941.txt  Pasted--alembic-upgrade-head-vbnet-ERRO-1727746603455.txt  Pasted--app-py-app-py-blueprin-1727209309925.txt  Pasted--auth-telegram--1727208969210.txt  Pasted--check-schema-py-SQLA-1727726455066.txt  Pasted--llm--1727724322661.txt  Pasted--makefile--1727724299772.txt  Pasted--makefile-sqlalchemy-exc-ProgrammingError-psycopg2-errors-U-1727210801728.txt  Pasted--not-exist-LINE-1-id-AS-users-id-users-username-AS-users-username-users-emai--1727706243501.txt  Pasted--vbnet-sqlalchemy-exc-InternalE-1727725756241.txt  Pasted-024-09-25-03-00-47-275-app-ERROR-Exception-on-create-auction-POST-Traceback-most-recent-ca-1727233287072.txt  (+57 more)
(+27 files in other folders)
