[tool.poetry]
name = "repl-nix-telegramloginwidget"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.6"
quart = "^0.19.6"
hypercorn = "^0.17.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
quart-auth = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
